# routes/recipes.js
@@ -5,12 +5,18 @@ const {
 	check,
 	checkSchema,
 } = require("express-validator");
+const swaggerAutogen = require("swagger-autogen");
 const connect = require("../db/connect");
 const ObjectId = require("mongodb").ObjectId;
 
 // Get all recipes
 
 routes.get("/", (req, res) => {
+	swaggerAutogen.security = [
+		{
+			oAuthSample: ["write_recipes", "read_recipes"],
+		},
+	];
 	const results = connect.getCollection().find();
 	results.toArray().then((documents) => {
 		res.status(200).json(documents);
